Subject Line: implemented fab button and cursor in MainActivity.java.
What Happened: (1) implemented fab button to navigate to AddEditItemActivity.java. (2) Created cursor adapter class MachineCursorAdapter for use in MainActivity. (3) Implemented cursor loader in MainActivity.

--- a/app/src/main/res/layout/activity_add_edit_item.xml
+++ b/app/src/main/res/layout/activity_add_edit_item.xml
@@ -143,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="true"
-                android:hint="number of item if more than one"
+                android:hint="which one if more than one"
                 android:textColor="@color/black"
                 android:inputType="number"/>
 
