Subject Line: Implement Year Picker Fragment
What Happened: (1) Implement DatePicker Dialog to only show year- set visibility to month and day to false. (2) Implement onDateSet to only set the year.

--- a/app/src/main/res/layout/activity_add_edit_item.xml
+++ b/app/src/main/res/layout/activity_add_edit_item.xml
@@ -33,16 +33,22 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+
+
             <Button
                 android:id="@+id/pick_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/year"/>
+                android:text="@string/year"
+                android:onClick="showDatePickerDialog"/>
+
+
 
             <EditText
                 android:id="@+id/et_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/pick_year"
                 android:enabled="false"
                 android:textColor="@color/black"/>
 
