--- a/app/src/main/res/layout/activity_add_edit_item.xml
+++ b/app/src/main/res/layout/activity_add_edit_item.xml
@@ -45,7 +45,7 @@
 
 
             <EditText
-                android:id="@+id/et_year"
+                android:id="@+id/et_model_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/pick_year"
