--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_margin">16dp</dimen>
 
-    <dimen name="small_activity_margin">8dp</dimen>
+    <dimen name="activity_small_margin">8dp</dimen>
 </resources>
