--- a/app/src/main/res/layout/activity_add_edit_item.xml
+++ b/app/src/main/res/layout/activity_add_edit_item.xml
@@ -94,6 +94,7 @@
 
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -109,10 +110,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:enabled="true"
+                android:hint="@string/not_needed_cars"
                 android:textColor="@color/black"/>
 
         </LinearLayout>
-
 
 
         <LinearLayout
@@ -149,7 +150,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:enabled="true"
-                android:hint="which one if more than one"
+                android:hint="@string/which_one"
                 android:textColor="@color/black"
                 android:inputType="number"/>
 
@@ -163,7 +164,7 @@
             android:textColor="@color/black"
             android:inputType="textCapSentences|textMultiLine"
             android:minLines="2"
-            android:hint="Add notes here"/>
+            android:hint="@string/notes"/>
 
     </LinearLayout>
 
