Subject: Added spinner for Equipment Types.
What Happened: Updated db with another table for Equipment Types. Initilized Equipment Types table with a few entries. Implemented Equipment Types spinner in AddEditItemActivity.java. Wired up spinner to db for both save and load.

--- a/app/src/main/res/layout/activity_add_edit_item.xml
+++ b/app/src/main/res/layout/activity_add_edit_item.xml
@@ -151,8 +151,8 @@
                 android:layout_height="wrap_content"
                 android:enabled="true"
                 android:hint="@string/which_one"
-                android:textColor="@color/black"
-                android:inputType="number"/>
+                android:inputType="number"
+                android:textColor="@color/black" />
 
         </LinearLayout>
 
