--- a/app/src/main/res/layout/activity_add_edit_item.xml
+++ b/app/src/main/res/layout/activity_add_edit_item.xml
@@ -24,7 +24,8 @@
                 android:id="@+id/sp_machine_type"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:spinnerMode="dropdown"/>
+                android:spinnerMode="dropdown"
+                android:visibility="visible"/>
 
         </LinearLayout>
 
