Subject: Share Data
What Happened: Attempted to enable email sharing. Doesn't work. Not sure where I screwed up. Code looks good when I read it but Email share starts to come up but then fades away.

--- a/app/src/main/res/menu/menu_add_edit_item_activity.xml
+++ b/app/src/main/res/menu/menu_add_edit_item_activity.xml
@@ -5,10 +5,17 @@
     tools:context=".RecordActivity">
 
     <item
-        android:id="@+id/action_share"
-        android:title="@string/share"
+        android:id="@+id/action_share_email"
+        android:title="@string/share_email"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_share_text"
+        android:title="@string/share_text"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:showAsAction="never"/>
+
 
     <item
         android:id="@+id/action_save"
