--- a/app/src/main/res/menu/menu_add_edit_item_activity.xml
+++ b/app/src/main/res/menu/menu_add_edit_item_activity.xml
@@ -2,17 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".RecordActivity">
+    tools:context=".AddEditItemActivity">
 
     <item
         android:id="@+id/action_share_email"
         android:title="@string/share_email"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-        app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/action_share_text"
-        android:title="@string/share_text"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         app:showAsAction="never"/>
 
