--- a/app/src/main/res/layout/activity_equipment_type.xml
+++ b/app/src/main/res/layout/activity_equipment_type.xml
@@ -56,7 +56,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_box_black_24dp"
-        android:scaleType="center"/>
+        android:scaleType="center"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white"/>
 
 </RelativeLayout>
