Subject: Share EMail and Share Text
What Happened: Imlemented Share Email to only show Email Shares. Implemented shareText to only show TextShares. Verified that sharing for both text and emails both worked. Left a lot of redundancy so that email and text remained separate implementations. Email share and Text share could easily be refactored

--- a/app/src/main/res/menu/menu_add_edit_item_activity.xml
+++ b/app/src/main/res/menu/menu_add_edit_item_activity.xml
@@ -10,6 +10,12 @@
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/action_share_text"
+        android:title="@string/share_text"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:showAsAction="never"/>
+
 
     <item
         android:id="@+id/action_save"
