--- a/app/src/main/res/layout/activity_add_edit_item.xml
+++ b/app/src/main/res/layout/activity_add_edit_item.xml
@@ -17,14 +17,19 @@
 
             <TextView
                 android:id="@+id/spinner_text_hint"
+                android:layout_width="0dp"
                 android:text="@string/machine_type"
+                android:layout_weight="1"
                 style="@style/CategoryStyle"/>
 
             <Spinner
                 android:id="@+id/sp_machine_type"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
                 android:spinnerMode="dropdown"
+                android:popupBackground="@color/design_default_color_primary"
+                android:theme="@style/spinnerTheme"
                 android:visibility="visible" />
 
         </LinearLayout>
