--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <!-- original accent color (too garrish)
     <color name="colorAccent">#FF4081</color>
-    !-->
+    bright yellow
     <color name="colorAccent">#ffda33</color>
+    !-->
+    <color name="colorAccent">#ffb324</color>
     <!-- styles.xml -->
     <color name="editColorText">#003366</color>
 
