--- a/app/src/main/res/menu/menu_add_edit_item_activity.xml
+++ b/app/src/main/res/menu/menu_add_edit_item_activity.xml
@@ -20,7 +20,7 @@
     <item
         android:id="@+id/action_save"
         android:title="@string/action_save"
-        android:icon="@drawable/ic_done"
+        android:icon="@drawable/ic_save_white_24dp"
         app:showAsAction="ifRoom" />
 
     <item
