--- a/app/src/main/res/menu/menu_edit_equip_type_activity.xml
+++ b/app/src/main/res/menu/menu_edit_equip_type_activity.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_save_edit_equip_type"
         android:title="@string/action_save"
-        android:icon="@drawable/ic_done"
+        android:icon="@drawable/ic_save_white_24dp"
         app:showAsAction="ifRoom" />
 
     <item
